--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/shubhvjain/mdToLatex#readme",
   "dependencies": {
+    "express": "4.17.1",
     "marked": "2.0.7"
   }
 }
