--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/shubhvjain/mdToLatex#readme",
   "dependencies": {
+    "adm-zip": "0.5.5",
     "express": "4.17.1",
     "marked": "2.0.7"
   }
