--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/shubhvjain/mdToLatex#readme",
   "dependencies": {
     "adm-zip": "0.5.5",
+    "axios": "0.21.1",
     "express": "4.17.1",
     "marked": "2.0.7"
   }
